--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
       "@/molecules/*": ["src/components/molecules/*"],
       "@/organisms/*": ["src/components/organisms/*"],
       "@/templates/*": ["src/components/templates/*"],
-      "@/pages/*": ["src/components/pages/*"],
+      "@/layouts/*": ["src/components/layouts/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
